--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=GameHex
-application.vendor=Yasmine Daly
+application.title=Pentagon3A1
+application.vendor=Moudhaffer
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -21,32 +21,51 @@ compile.on.save.unsupported.javafx=true
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/GameHex.jar
+dist.jar=${dist.dir}/Pentagon3A1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Yasmine Daly\\Documents\\NetBeansProjects\\Connector_J_8.0\\Connector J 8.0\\mysql-connector-java-8.0.27.jar
+file.reference.commons-io-2.11.0-javadoc.jar=JARs/commons-io-2.11.0-javadoc.jar
+file.reference.commons-io-2.11.0-sources.jar=JARs/commons-io-2.11.0-sources.jar
+file.reference.commons-io-2.11.0-test-sources.jar=JARs/commons-io-2.11.0-test-sources.jar
+file.reference.commons-io-2.11.0-tests.jar=JARs/commons-io-2.11.0-tests.jar
+file.reference.commons-io-2.11.0.jar=JARs/commons-io-2.11.0.jar
+file.reference.controlsfx-8.40.15.jar=JARs/controlsfx-8.40.15.jar
+file.reference.controlsfx-samples-8.40.15.jar=JARs/controlsfx-samples-8.40.15.jar
+file.reference.fxsampler-1.0.10.jar=JARs/fxsampler-1.0.10.jar
+file.reference.jfoenix-8.0.10.jar=C:\\Users\\Moudhaffer\\Downloads\\jfoenix-8.0.10.jar
+file.reference.org.json-chargebee-1.0.jar=JARs/org.json-chargebee-1.0.jar
+file.reference.orianna-4.0.0-rc8-jar-with-dependencies.jar=JARs/orianna-4.0.0-rc8-jar-with-dependencies.jar
+file.reference.slf4j-simple-1.6.1.jar=JARs/slf4j-simple-1.6.1.jar
+file.reference.slf4j.api-1.6.1.jar=JARs/slf4j.api-1.6.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.slf4j-simple-1.6.1.jar}:\
+    ${file.reference.commons-io-2.11.0-javadoc.jar}:\
+    ${file.reference.commons-io-2.11.0-sources.jar}:\
+    ${file.reference.commons-io-2.11.0-test-sources.jar}:\
+    ${file.reference.commons-io-2.11.0-tests.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.controlsfx-8.40.15.jar}:\
+    ${file.reference.controlsfx-samples-8.40.15.jar}:\
+    ${file.reference.fxsampler-1.0.10.jar}:\
+    ${file.reference.org.json-chargebee-1.0.jar}:\
+    ${file.reference.orianna-4.0.0-rc8-jar-with-dependencies.jar}:\
+    ${file.reference.slf4j.api-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.modulepath=
-javac.processormodulepath=
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -54,8 +73,6 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-javac.test.modulepath=\
-    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -88,7 +105,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=gamehex.GameHex
+javafx.main.class=pentagon3a1.Pentagon3A1
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -116,13 +133,9 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.modulepath=\
-    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
