--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=GameHex
-application.vendor=Yasmine Daly
+application.title=final
+application.vendor=asus
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -21,32 +21,184 @@ compile.on.save.unsupported.javafx=true
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/GameHex.jar
+dist.jar=${dist.dir}/final.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Yasmine Daly\\Documents\\NetBeansProjects\\Connector_J_8.0\\Connector J 8.0\\mysql-connector-java-8.0.27.jar
+file.reference.aopalliance-1.0.jar=jars\\aopalliance-1.0.jar
+file.reference.appframework-1.0.3.jar=jars\\appframework-1.0.3.jar
+file.reference.bcmail-jdk14-1.38.jar=jars\\bcmail-jdk14-1.38.jar
+file.reference.bcmail-jdk14-138.jar=jars\\bcmail-jdk14-138.jar
+file.reference.bcprov-jdk14-1.38.jar=jars\\bcprov-jdk14-1.38.jar
+file.reference.bcprov-jdk14-138.jar=jars\\bcprov-jdk14-138.jar
+file.reference.bctsp-jdk14-1.38.jar=jars\\bctsp-jdk14-1.38.jar
+file.reference.castor-core-1.3.3.jar=jars\\castor-core-1.3.3.jar
+file.reference.castor-xml-1.3.3.jar=jars\\castor-xml-1.3.3.jar
+file.reference.commons-beanutils-1.8.0.jar=jars\\commons-beanutils-1.8.0.jar
+file.reference.commons-beanutils-1.9.0.jar=jars\\commons-beanutils-1.9.0.jar
+file.reference.commons-collections-3.2.1.jar=jars\\commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.2.jar=jars\\commons-collections-3.2.2.jar
+file.reference.commons-digester-1.7.jar=jars\\commons-digester-1.7.jar
+file.reference.commons-digester-2.1.jar=jars\\commons-digester-2.1.jar
+file.reference.commons-io-2.11.0-javadoc.jar=jars\\commons-io-2.11.0-javadoc.jar
+file.reference.commons-io-2.11.0-sources.jar=jars\\commons-io-2.11.0-sources.jar
+file.reference.commons-io-2.11.0-test-sources.jar=jars\\commons-io-2.11.0-test-sources.jar
+file.reference.commons-io-2.11.0-tests.jar=jars\\commons-io-2.11.0-tests.jar
+file.reference.commons-io-2.11.0.jar=jars\\commons-io-2.11.0.jar
+file.reference.commons-javaflow-20060411.jar=jars\\commons-javaflow-20060411.jar
+file.reference.commons-lang-2.6.jar=jars\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=jars\\commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.jar=jars\\commons-logging-1.1.jar
+file.reference.controlsfx-8.40.11.jar=jars\\controlsfx-8.40.11.jar
+file.reference.controlsfx-8.40.15.jar=jars\\controlsfx-8.40.15.jar
+file.reference.controlsfx-samples-8.40.15.jar=jars\\controlsfx-samples-8.40.15.jar
+file.reference.core-2.3.0.jar=jars\\core-2.3.0.jar
+file.reference.ecj-4.3.1.jar=jars\\ecj-4.3.1.jar
+file.reference.fontawesomefx-8.2.jar=jars\\fontawesomefx-8.2.jar
+file.reference.fontawesomefx-8.9.jar=jars\\fontawesomefx-8.9.jar
+file.reference.fontawesomefx-commons-9.1.2.jar=jars\\fontawesomefx-commons-9.1.2.jar
+file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar=jars\\fontawesomefx-fontawesome-4.7.0-9.1.2.jar
+file.reference.fxsampler-1.0.10.jar=jars\\fxsampler-1.0.10.jar
+file.reference.groovy-all-1.5.5.jar=jars\\groovy-all-1.5.5.jar
+file.reference.hsqldb.jar=jars\\hsqldb.jar
+file.reference.icu4j-57.1.jar=jars\\icu4j-57.1.jar
+file.reference.ini4j-0.5.1.jar=jars\\ini4j-0.5.1.jar
+file.reference.iText-2.1.0.jar=jars\\iText-2.1.0.jar
+file.reference.itext-2.1.7.js5.jar=jars\\itext-2.1.7.js5.jar
+file.reference.jackson-annotations-2.1.4.jar=jars\\jackson-annotations-2.1.4.jar
+file.reference.jackson-annotations-2.13.1.jar=jars\\jackson-annotations-2.13.1.jar
+file.reference.jackson-core-2.1.4.jar=jars\\jackson-core-2.1.4.jar
+file.reference.jackson-core-2.13.1.jar=jars\\jackson-core-2.13.1.jar
+file.reference.jackson-databind-2.1.4.jar=jars\\jackson-databind-2.1.4.jar
+file.reference.jackson-databind-2.13.1.jar=jars\\jackson-databind-2.13.1.jar
+file.reference.jakarta-regexp-1.4.jar=jars\\jakarta-regexp-1.4.jar
+file.reference.jasperreports-3.7.0.jar=jars\\jasperreports-3.7.0.jar
+file.reference.jasperreports-6.3.0.jar=jars\\jasperreports-6.3.0.jar
+file.reference.javax.inject-1.jar=jars\\javax.inject-1.jar
+file.reference.javax.mail.jar=jars\\javax.mail.jar
+file.reference.jcommon-1.0.23.jar=jars\\jcommon-1.0.23.jar
+file.reference.jfoenix-8.0.10.jar=jars\\jfoenix-8.0.10.jar
+file.reference.jfreechart-1.0.19.jar=jars\\jfreechart-1.0.19.jar
+file.reference.jsoup-1.14.3.jar=jars\\jsoup-1.14.3.jar
+file.reference.lucene-analyzers-common-4.5.1.jar=jars\\lucene-analyzers-common-4.5.1.jar
+file.reference.lucene-core-4.5.1.jar=jars\\lucene-core-4.5.1.jar
+file.reference.lucene-queries-4.5.1.jar=jars\\lucene-queries-4.5.1.jar
+file.reference.lucene-queryparser-4.5.1.jar=jars\\lucene-queryparser-4.5.1.jar
+file.reference.lucene-sandbox-4.5.1.jar=jars\\lucene-sandbox-4.5.1.jar
+file.reference.mysql-connector-java-5.1.6-bin.jar=jars\\mysql-connector-java-5.1.6-bin.jar
+file.reference.mysql-connector-java-8.0.27.jar=jars\\mysql-connector-java-8.0.27.jar
+file.reference.olap4j-0.9.7.309-JS-3.jar=jars\\olap4j-0.9.7.309-JS-3.jar
+file.reference.org.json-chargebee-1.0.jar=jars\\org.json-chargebee-1.0.jar
+file.reference.orianna-4.0.0-rc8-jar-with-dependencies.jar=jars\\orianna-4.0.0-rc8-jar-with-dependencies.jar
+file.reference.slf4j-simple-1.6.1.jar=jars\\slf4j-simple-1.6.1.jar
+file.reference.slf4j.api-1.6.1.jar=jars\\slf4j.api-1.6.1.jar
+file.reference.spring-aop-3.0.6.RELEASE.jar=jars\\spring-aop-3.0.6.RELEASE.jar
+file.reference.spring-asm-3.0.6.RELEASE.jar=jars\\spring-asm-3.0.6.RELEASE.jar
+file.reference.spring-beans-3.0.6.RELEASE.jar=jars\\spring-beans-3.0.6.RELEASE.jar
+file.reference.spring-context-3.0.6.RELEASE.jar=jars\\spring-context-3.0.6.RELEASE.jar
+file.reference.spring-core-3.0.6.RELEASE.jar=jars\\spring-core-3.0.6.RELEASE.jar
+file.reference.spring-expression-3.0.6.RELEASE.jar=jars\\spring-expression-3.0.6.RELEASE.jar
+file.reference.stax-1.2.0.jar=jars\\stax-1.2.0.jar
+file.reference.stax-api-1.0-2.jar=jars\\stax-api-1.0-2.jar
+file.reference.stax-api-1.0.1.jar=jars\\stax-api-1.0.1.jar
+file.reference.substance.jar=jars\\substance.jar
+file.reference.swing-worker-1.1.jar=jars\\swing-worker-1.1.jar
+file.reference.twilio-8.9.0-jar-with-dependencies.jar=jars\\twilio-8.9.0-jar-with-dependencies.jar
+file.reference.twilio-8.9.0-javadoc.jar=jars\\twilio-8.9.0-javadoc.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
+    ${file.reference.aopalliance-1.0.jar}:\
+    ${file.reference.appframework-1.0.3.jar}:\
+    ${file.reference.bcmail-jdk14-1.38.jar}:\
+    ${file.reference.bcmail-jdk14-138.jar}:\
+    ${file.reference.bcprov-jdk14-1.38.jar}:\
+    ${file.reference.bcprov-jdk14-138.jar}:\
+    ${file.reference.bctsp-jdk14-1.38.jar}:\
+    ${file.reference.castor-core-1.3.3.jar}:\
+    ${file.reference.castor-xml-1.3.3.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-beanutils-1.9.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-io-2.11.0-javadoc.jar}:\
+    ${file.reference.commons-io-2.11.0-sources.jar}:\
+    ${file.reference.commons-io-2.11.0-test-sources.jar}:\
+    ${file.reference.commons-io-2.11.0-tests.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.controlsfx-8.40.15.jar}:\
+    ${file.reference.controlsfx-samples-8.40.15.jar}:\
+    ${file.reference.core-2.3.0.jar}:\
+    ${file.reference.ecj-4.3.1.jar}:\
+    ${file.reference.fontawesomefx-8.2.jar}:\
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.fontawesomefx-commons-9.1.2.jar}:\
+    ${file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar}:\
+    ${file.reference.fxsampler-1.0.10.jar}:\
+    ${file.reference.groovy-all-1.5.5.jar}:\
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.iText-2.1.0.jar}:\
+    ${file.reference.icu4j-57.1.jar}:\
+    ${file.reference.ini4j-0.5.1.jar}:\
+    ${file.reference.itext-2.1.7.js5.jar}:\
+    ${file.reference.jackson-annotations-2.1.4.jar}:\
+    ${file.reference.jackson-annotations-2.13.1.jar}:\
+    ${file.reference.jackson-core-2.1.4.jar}:\
+    ${file.reference.jackson-core-2.13.1.jar}:\
+    ${file.reference.jackson-databind-2.1.4.jar}:\
+    ${file.reference.jackson-databind-2.13.1.jar}:\
+    ${file.reference.jakarta-regexp-1.4.jar}:\
+    ${file.reference.jasperreports-3.7.0.jar}:\
+    ${file.reference.jasperreports-6.3.0.jar}:\
+    ${file.reference.javax.inject-1.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jsoup-1.14.3.jar}:\
+    ${file.reference.lucene-analyzers-common-4.5.1.jar}:\
+    ${file.reference.lucene-core-4.5.1.jar}:\
+    ${file.reference.lucene-queries-4.5.1.jar}:\
+    ${file.reference.lucene-queryparser-4.5.1.jar}:\
+    ${file.reference.lucene-sandbox-4.5.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.6-bin.jar}:\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${file.reference.olap4j-0.9.7.309-JS-3.jar}:\
+    ${file.reference.org.json-chargebee-1.0.jar}:\
+    ${file.reference.orianna-4.0.0-rc8-jar-with-dependencies.jar}:\
+    ${file.reference.slf4j-simple-1.6.1.jar}:\
+    ${file.reference.slf4j.api-1.6.1.jar}:\
+    ${file.reference.spring-aop-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-asm-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-beans-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-context-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-core-3.0.6.RELEASE.jar}:\
+    ${file.reference.spring-expression-3.0.6.RELEASE.jar}:\
+    ${file.reference.stax-1.2.0.jar}:\
+    ${file.reference.stax-api-1.0-2.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.substance.jar}:\
+    ${file.reference.swing-worker-1.1.jar}:\
+    ${file.reference.twilio-8.9.0-jar-with-dependencies.jar}:\
+    ${file.reference.twilio-8.9.0-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.modulepath=
-javac.processormodulepath=
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -54,8 +206,6 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-javac.test.modulepath=\
-    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -88,7 +238,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=gamehex.GameHex
+javafx.main.class=pkgfinal.Final
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -116,13 +266,9 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.modulepath=\
-    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
